home link edited

--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Charity</a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">बनारस युथ फाउंडेशन</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li class="active">
-								<a href="index.html">Home</a>
+								<a href="index.html">होम
+</a>
 							</li>
 							<li>
 								<a href="#" class="fh5co-sub-ddown">Get Involved</a>
@@ -158,7 +159,7 @@
 								<i class="icon-happy"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Happy Giving</h3>
+								<h3>Happy Donating</h3>
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 								<p><a href="#">Learn More</a></p>
 							</div>
