--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">बनारस युथ फाउंडेशन</a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">बनारस युथ फाउंडेशन </a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
@@ -95,9 +95,9 @@
 </a>
 							</li>
 							<li>
-								<a href="#" class="fh5co-sub-ddown">Get Involved</a>
+								<a href="#" class="fh5co-sub-ddown"> यहाँ देखे </a>
 								<ul class="fh5co-sub-menu">
-									<li><a href="#">Donate</a></li>
+									<li><a href="#">दान  </a></li>
 									<li><a href="#">Fundraise</a></li>
 									<li><a href="#">Campaign</a></li>
 									<li><a href="#">Philantrophy</a></li>
@@ -105,16 +105,16 @@
 								</ul>
 							</li>
 							<li>
-								<a href="#" class="fh5co-sub-ddown">Projects</a>
+								<a href="#" class="fh5co-sub-ddown">उपकरण </a>
 								 <ul class="fh5co-sub-menu">
 								 	<li><a href="#">Water World</a></li>
 								 	<li><a href="#">Cloth Giving</a></li>
 								 	<li><a href="#">Medical Mission</a></li>
 								</ul>
 							</li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="about.html">परिचय</a></li>
+							<li><a href="blog.html">ब्लॉग </a></li>
+							<li><a href="contact.html">सम्पर्क</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -283,7 +283,7 @@
 
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4 text-center animate-box">
-						<a href="#" class="btn btn-primary btn-lg">See Gallery</a>
+						<a href="#" class="btn btn-primary btn-lg">चित्र देखें </a>
 					</div>
 				</div>
 
