--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@
 								<a href="#" class="fh5co-sub-ddown"> यहाँ देखे </a>
 								<ul class="fh5co-sub-menu">
 									<li><a href="#">दान  </a></li>
-									<li><a href="#">Fundraise</a></li>
-									<li><a href="#">Campaign</a></li>
-									<li><a href="#">Philantrophy</a></li>
-									<li><a href="#">Volunteer</a></li>
+									<li><a href="#">फंडरेज</a></li>
+									<li><a href="#">कैम्पेन </a></li>
+									<li><a href="#">फिलॉन्ट्रॉफी </a></li>
+									<li><a href="#">वालंटियर </a></li>
 								</ul>
 							</li>
 							<li>
 								<a href="#" class="fh5co-sub-ddown">उपकरण </a>
 								 <ul class="fh5co-sub-menu">
-								 	<li><a href="#">Water World</a></li>
-								 	<li><a href="#">Cloth Giving</a></li>
-								 	<li><a href="#">Medical Mission</a></li>
+								 	<li><a href="#">वाटर  वर्ल्ड</a></li>
+								 	<li><a href="#">क्लॉथ  गिविंग  </a></li>
+								 	<li><a href="#">मेडिकल  मिशन </a></li>
 								</ul>
 							</li>
 							<li><a href="about.html">परिचय</a></li>
@@ -127,9 +127,9 @@
 			<div class="fh5co-overlay"></div>
 			<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(images/cover_bg_1.jpg);">
 				<div class="desc animate-box">
-					<h2><strong>Donate</strong> for the <strong>Poor Children</strong></h2>
-					<span>HandCrafted by <a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name">FreeHTML5.co</a></span>
-					<span><a class="btn btn-primary btn-lg" href="#">Donate Now</a></span>
+					<h2><strong>दान</strong> for the <strong>प्रमुख बच्चों</strong></h2>
+					<span>द्वारा हस्तलिखित <a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name">FreeHTML5.co</a></span>
+					<span><a class="btn btn-primary btn-lg" href="#">अभी दान कीजिए</a></span>
 				</div>
 			</div>
 
@@ -145,9 +145,9 @@
 								<i class="icon-profile-male"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Become a volunteer</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-								<p><a href="#">Learn More</a></p>
+								<h3>एक अलग मात्रा में</h3>
+								<p>उसके साथ गलती खोजना आसान है, कोई भी परेशानी नहीं। या अधिक कोमलता के साथ आप को फटकारते हैं।</p>
+								<p><a href="#">और अधिक जानें</a></p>
 							</div>
 						</div>
 
@@ -159,8 +159,8 @@
 								<i class="icon-happy"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Happy Donating</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>हैप्पी दान</h3>
+								<p>उसके साथ गलती खोजना आसान है, कोई भी परेशानी नहीं। या अधिक कोमलता के साथ आप को फटकारते हैं।</p>
 								<p><a href="#">Learn More</a></p>
 							</div>
 						</div>
@@ -172,9 +172,9 @@
 								<i class="icon-wallet"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Donation</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-								<p><a href="#">Learn More</a></p>
+								<h3>दान</h3>
+								<p>उसके साथ गलती खोजना आसान है, कोई भी परेशानी नहीं। या अधिक कोमलता के साथ आप को फटकारते हैं।</p>
+								<p><a href="#">और अधिक जानें</a></p>
 							</div>
 						</div>
 					</div>
@@ -186,8 +186,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center heading-section">
-						<h3>Giving is Virtue.</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+						<h3>डोनेटियोगिविंग पुण्य है।</h3>
+						<p>दूर-दूर तक, पहाड़ों शब्द के पीछे, वोक्ले और व्यंजन देशों से दूर, अंधे ग्रंथ रहते हैं।
+							उसके साथ गलती खोजना आसान है, कोई भी परेशानी नहीं। या अधिक कोमलता के साथ आप को फटकारते हैं।</p>
 					</div>
 				</div>
 
@@ -205,20 +206,20 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="feature-text">
-							<h3>Love</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3>प्रेम</h3>
+							<p>दूर-दूर तक, पहाड़ों शब्द के पीछे, वोकलिया और कॉन्सनसेंटिया देशों से दूर, अंधे ग्रंथ रहते हैं।</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
-							<h3>Compassion</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3>दया</h3>
+							<p>दूर-दूर तक, पहाड़ों शब्द के पीछे, वोकलिया और कॉन्सनसेंटिया देशों से दूर, अंधे ग्रंथ रहते हैं।</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature-text">
-							<h3>Charity</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3>दान पुण्य</h3>
+							<p>र-दूर तक, पहाड़ों शब्द के पीछे, वोकलिया और कॉन्सनसेंटिया देशों से दूर, अंधे ग्रंथ रहते हैं।</p>
 						</div>
 					</div>
 				</div>
@@ -233,8 +234,8 @@
 
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-						<h3>Our Gallery</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores, perspiciatis accusamus asperiores sint consequuntur debitis.</p>
+						<h3>हमारी गैलरी</h3>
+						<p>लॉरेम इप्सम डोलर अमेट, कंसेटेटुर एडिपिसिंग एलीट। हमारे पूर्वजों की इच्छा करना आसान है, वे ऋण के कठोर परिणामों के खिलाफ ला रहे हैं।</p>
 					</div>
 				</div>
 
